<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WheatherCard"
    android:layout_marginLeft="@dimen/weather_card_padding"
    android:layout_marginRight="@dimen/weather_card_padding"
    android:layout_marginTop="@dimen/weather_card_margin_top"
    android:layout_marginBottom="@dimen/weather_card_margin_top">


    <LinearLayout
        android:id="@+id/weather_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/weather_main_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:text="@string/city_name"
            android:gravity="center"
            android:textSize="@dimen/text.22"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_medium">

            <TextView
                style="@style/WeatherTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/temperature"
                android:drawablePadding="@dimen/padding_small"
                android:text="@string/temperature"/>

            <TextView
                android:id="@+id/temperature"
                style="@style/WeatherTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_medium">

            <TextView
                style="@style/WeatherTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/pressure"
                android:drawablePadding="@dimen/padding_small"
                android:text="@string/pressure"/>

            <TextView
                android:id="@+id/pressure"
                style="@style/WeatherTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_medium">

            <TextView
                style="@style/WeatherTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/humidity"
                android:drawablePadding="@dimen/padding_small"
                android:text="@string/humidity"/>

            <TextView
                android:id="@+id/humidity"
                style="@style/WeatherTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_medium">

            <TextView
                style="@style/WeatherTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/wind_speed"
                android:drawablePadding="@dimen/padding_small"
                android:text="@string/wind_speed"/>

            <TextView
                android:id="@+id/wind_speed"
                style="@style/WeatherTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:id="@+id/references_to_list"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cityes_ref"/>

    </LinearLayout>



    <TextView
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/weather_error"
        android:textColor="@color/gray_880b1f35"
        android:textSize="@dimen/text.18"
        android:visibility="gone"/>

</FrameLayout>